--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="/site.webmanifest">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web interface for simple text cipher algorithms" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.23.6/antd.css"
-    integrity="sha256-VcWLDsd1Jrj16QZzmvX28YbDY1XwK3P4ku5mo1I+89g=" crossorigin="anonymous" />
+  <link rel="stylesheet" href="antd.css"/>
   <title>CipherAlgorithms</title>
 </head>
 
